--- a/.github/workflows/main_samplewebappgroup5.yml
+++ b/.github/workflows/main_samplewebappgroup5.yml
@@ -15,6 +15,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          path: . # Checkout the entire repository
 
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
