update checkout path

--- a/.github/workflows/main_samplewebappgroup5.yml
+++ b/.github/workflows/main_samplewebappgroup5.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
+      - name: Print working directory
+        run: echo Working Directory: %CD%  # For Windows
+
       - name: dotnet publish
         run: dotnet publish -c Release -property:PublishDir=C:\\Program Files\\dotnet\\SampleWebApp
 
