--- a/.github/workflows/main_samplewebappgroup5.yml
+++ b/.github/workflows/main_samplewebappgroup5.yml
@@ -27,8 +27,10 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: Print working directory
-        run: echo Working Directory: %CD%
-        
+        run: |
+          echo Working Directory:
+          %CD%
+
       - name: dotnet publish
         run: dotnet publish -c Release -property:PublishDir=C:\\Program Files\\dotnet\\SampleWebApp
 
