--- a/.github/workflows/main_samplewebappgroup5.yml
+++ b/.github/workflows/main_samplewebappgroup5.yml
@@ -28,8 +28,7 @@ jobs:
 
       - name: Print working directory
         run: |
-          echo Working Directory:
-          %CD%
+          echo Working Directory: %CD%
 
       - name: dotnet publish
         run: dotnet publish -c Release -property:PublishDir=C:\\Program Files\\dotnet\\SampleWebApp
