--- a/.github/workflows/main_samplewebappgroup5.yml
+++ b/.github/workflows/main_samplewebappgroup5.yml
@@ -31,7 +31,7 @@ jobs:
           echo Working Directory: %CD%
 
       - name: dotnet publish
-        run: dotnet publish -c Release -property:PublishDir=C:\\Program Files\\dotnet\\SampleWebApp ./SampleWebApp.csproj
+        run: dotnet publish -c Release -property:PublishDir=C:\\Program Files\\dotnet\\SampleWebApp SampleWebApp.csproj
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
