--- a/.github/workflows/main_samplewebappgroup5.yml
+++ b/.github/workflows/main_samplewebappgroup5.yml
@@ -29,13 +29,12 @@ jobs:
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
-      - name: Print working directory
-        run: |
-          echo Working Directory: %CD%
+      #- name: Print working directory
+      # run: |
+      #  echo Working Directory: %CD%
 
       - name: dotnet publish
-        run: |
-          dotnet publish -c Release -property:PublishDir=${{ env.PublishDir }} SampleWebApp.csproj
+        run: dotnet publish -c Release -property:PublishDir=./publish SampleWebApp.csproj
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
