--- a/.github/workflows/main_samplewebappgroup5.yml
+++ b/.github/workflows/main_samplewebappgroup5.yml
@@ -15,8 +15,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - uses: azure/login@v2
         with:
           path: . # Checkout the entire repository
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
@@ -50,12 +52,12 @@ jobs:
         with:
           name: .net-app
 
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_97CFED835B1941A9B6066F1B06C5F3EB }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_B243A4D05C734CF393FF5F2835F8AD67 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_D5184BC3C5D3457CB563E5110F3D2F33 }}
+      # - name: Login to Azure
+      #   uses: azure/login@v2
+      #   with:
+      #     client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_97CFED835B1941A9B6066F1B06C5F3EB }}
+      #     tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_B243A4D05C734CF393FF5F2835F8AD67 }}
+      #     subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_D5184BC3C5D3457CB563E5110F3D2F33 }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -64,3 +66,7 @@ jobs:
           app-name: "samplewebappgroup5"
           slot-name: "Production"
           package: .
+
+      - name: Logout
+        run: |
+          az logout
