--- a/.github/workflows/test_samplewebappgroup5.yml
+++ b/.github/workflows/test_samplewebappgroup5.yml
@@ -15,10 +15,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - uses: azure/login@v2
+        # - uses: azure/login@v2
         with:
           path: . # Checkout the entire repository
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+      #     creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
@@ -29,7 +29,7 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -property:PublishDir=./publish SampleWebApp.csproj
+        run: dotnet publish -c Release -property:PublishDir=site\mywebapp SampleWebApp.csproj
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -41,7 +41,7 @@ jobs:
     runs-on: windows-latest
     needs: build
     environment:
-      name: "Production"
+      name: "Test"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
       id-token: write #This is required for requesting the JWT
@@ -52,21 +52,21 @@ jobs:
         with:
           name: .net-app
 
-      # - name: Login to Azure
-      #   uses: azure/login@v2
-      #   with:
-      #     client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_97CFED835B1941A9B6066F1B06C5F3EB }}
-      #     tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_B243A4D05C734CF393FF5F2835F8AD67 }}
-      #     subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_D5184BC3C5D3457CB563E5110F3D2F33 }}
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_97CFED835B1941A9B6066F1B06C5F3EB }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_B243A4D05C734CF393FF5F2835F8AD67 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_D5184BC3C5D3457CB563E5110F3D2F33 }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: "samplewebappgroup5"
-          slot-name: "Production"
+          slot-name: "Test"
           package: .
 
-      - name: Logout
-        run: |
-          az logout
+      # - name: Logout
+      #   run: |
+      #     az logout
