--- a/.github/workflows/test_samplewebappgroup5.yml
+++ b/.github/workflows/test_samplewebappgroup5.yml
@@ -1,12 +1,12 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Test env
+name: Production env
 
 on:
   push:
     branches:
-      - test
+      - main
   workflow_dispatch:
 
 jobs:
@@ -41,7 +41,7 @@ jobs:
     runs-on: windows-latest
     needs: build
     environment:
-      name: "Test"
+      name: "Production"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
       id-token: write #This is required for requesting the JWT
@@ -64,7 +64,7 @@ jobs:
         uses: azure/webapps-deploy@v3
         with:
           app-name: "samplewebappgroup5"
-          slot-name: "Test"
+          slot-name: "Production"
           package: .
 
       # - name: Logout
