update yaml file

--- a/.github/workflows/test_samplewebappgroup5-test.yml
+++ b/.github/workflows/test_samplewebappgroup5-test.yml
@@ -62,5 +62,5 @@ jobs:
         uses: azure/webapps-deploy@v3
         with:
           app-name: "samplewebappgroup5-test"
-          slot-name: "Test"
+          #slot-name: "Test"
           package: .
